--- a/lenses/static/lenses/css/lens_query.css
+++ b/lenses/static/lenses/css/lens_query.css
@@ -1,3 +1,7 @@
+.data-form {
+    height:300px;
+}
+
 .data-form table tr td:nth-child(2) {
     text-align:right;
     padding-right: 20px;
@@ -16,9 +20,11 @@
 
 
 
-.carousel-item {
-    height: 500px;
+.instructions {
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
+
 
 
 .surro {
