--- a/lenses/templates/lenses/lens_query.html
+++ b/lenses/templates/lenses/lens_query.html
@@ -9,7 +9,7 @@
 <div class="jb-container">
   <h1 class="jb-heading-1">Query Lenses</h1>
   
-  <div class="jb-table-no-lines">
+  <div class="jb-table-no-lines2">
     <form id="lens-query" method="POST">
       {% csrf_token %}
 
@@ -128,12 +128,12 @@
       {% with fwf=forms_with_fields %}
       <ul class="nav nav-tabs" id="myTab">
 	<li class="nav-item">
-	  <button class="nav-link {% get_carousel_active fwe fwf 'default' %}" id="default-tab" data-toggle="tab" data-target="#default" type="button">
+	  <button class="nav-link {% get_tab_active fwe fwf 'default' %}" id="default-tab" data-toggle="tab" data-target="#default" type="button">
 	    Joined Queries
 	  </button>
 	</li>
 	<li class="nav-item">
-	  <button class="nav-link {% get_carousel_active fwe fwf 'imaging' %}" id="imaging-tab" data-toggle="tab" data-target="#imaging" type="button">
+	  <button class="nav-link {% get_tab_active fwe fwf 'imaging' %}" id="imaging-tab" data-toggle="tab" data-target="#imaging" type="button">
 	    Imaging
 	    {% if 'imaging' in fwe %}
 	    <span class="badge badge-pill badge-danger"><img src="{% static 'icons/exclamation.svg' %}"></span>
@@ -143,7 +143,7 @@
 	  </button>
 	</li>
 	<li class="nav-item">
-	  <button class="nav-link {% get_carousel_active fwe fwf 'spectrum' %}" id="spectrum-tab" data-toggle="tab" data-target="#spectrum" type="button">
+	  <button class="nav-link {% get_tab_active fwe fwf 'spectrum' %}" id="spectrum-tab" data-toggle="tab" data-target="#spectrum" type="button">
 	    Spectra
 	    {% if 'spectrum' in fwe %}
 	    <span class="badge badge-pill badge-danger"><img src="{% static 'icons/exclamation.svg' %}"></span>
@@ -153,7 +153,7 @@
 	  </button>
 	</li>
 	<li class="nav-item">
-	  <button class="nav-link {% get_carousel_active fwe fwf 'catalogue' %}" id="catalogue-tab" data-toggle="tab" data-target="#catalogue" type="button">
+	  <button class="nav-link {% get_tab_active fwe fwf 'catalogue' %}" id="catalogue-tab" data-toggle="tab" data-target="#catalogue" type="button">
 	    Catalogues
 	    {% if 'catalogue' in fwe %}
 	    <span class="badge badge-pill badge-danger"><img src="{% static 'icons/exclamation.svg' %}"></span>
@@ -163,16 +163,20 @@
 	  </button>
 	</li>
 	<li class="nav-item">
-	  <button class="nav-link {% get_carousel_active fwe fwf 'lensmodel' %}" id="lensmodel-tab" data-toggle="tab" data-target="#lensmodel" type="button">
+	  <button class="nav-link {% get_tab_active fwe fwf 'lensmodel' %}" id="lensmodel-tab" data-toggle="tab" data-target="#lensmodel" type="button">
 	    Models
 	  </button>
 	</li>
       </ul>
       <div class="tab-content" id="myTabContent">
-	<div class="tab-pane fade show {% get_carousel_active fwe fwf 'default' %}" id="default">
-	  Instructions for joined queries
+	<div class="data-form tab-pane fade show {% get_tab_active fwe fwf 'default' %}" id="default">
+	  <div class="instructions">
+	    <p>
+	      Instructions for joined queries
+	    </p>
+	  </div>
 	</div>
-	<div class="data-form tab-pane fade {% get_carousel_active fwe fwf 'imaging' %}" id="imaging">
+	<div class="data-form tab-pane fade {% get_tab_active fwe fwf 'imaging' %}" id="imaging">
 	  {% with form=imaging_form %}
 	      
 	  {% if form.non_field_errors|length > 0 %}
@@ -240,7 +244,7 @@
 	  </table>
 	  {% endwith %}
 	</div>
-	<div class="data-form tab-pane fade {% get_carousel_active fwe fwf 'spectrum' %}" id="spectrum">
+	<div class="data-form tab-pane fade {% get_tab_active fwe fwf 'spectrum' %}" id="spectrum">
 	  {% with form=spectrum_form %}
 	  
 	  {% if form.non_field_errors|length > 0 %}
@@ -308,7 +312,7 @@
 	  </table>
 	  {% endwith %}
 	</div>
-	<div class="data-form tab-pane fade {% get_carousel_active fwe fwf 'catalogue' %}" id="catalogue">
+	<div class="data-form tab-pane fade {% get_tab_active fwe fwf 'catalogue' %}" id="catalogue">
 	  {% with form=catalogue_form %}
 	  
 	  {% if form.non_field_errors|length > 0 %}
@@ -376,8 +380,12 @@
 	  </table>
 	  {% endwith %}
 	</div>
-	<div class="tab-pane fade {% get_carousel_active fwe fwf 'lensmodel' %}" id="lensmodel">
-	  Coming soon
+	<div class="data-form tab-pane fade {% get_tab_active fwe fwf 'lensmodel' %}" id="lensmodel">
+	  <div class="instructions">
+	    <p>
+	      Coming soon
+	    </p>
+	  </div>
 	</div>
       </div>
       {% endwith %}
