--- a/templates/activity_all.html
+++ b/templates/activity_all.html
@@ -13,44 +13,19 @@
       <td>
 	
 	{% if action.verb == "Add" %}
-	{% if N == 1 %}
-	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">
-	  1 new {{ action.action_object.item_type|get_name_singular }}
-	</a>
-	was
-	{% else %}
-	<a href="{{ action.action_object.get_absolute_url }}" target="_blank">
-	  {{ N }} new {{ action.action_object.item_type|get_name_plural }}
-	</a>
-	were
-	{% endif %}
-	added by
-	<a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a>
-	at <em>{{ action.timestamp }}</em>
+	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">{{ N }} new {% singular_or_plural action.action_object.item_type N %}</a> {{ N|pluralize:"was,were" }}
+	added by <a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a> at <em>{{ action.timestamp }}</em>
 
 
 	{% elif action.verb == "AddData" %}
-	{% if N == 1 %}
-	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">
-	  1 new {{ action.action_object.item_type|get_name_singular }}
-	</a>
-	was
-	{% else %}
-	<a href="{{ action.action_object.get_absolute_url }}" target="_blank">
-	  {{ N }} new {{ action.action_object.item_type|get_name_plural }}
-	</a>
-	were
-	{% endif %}
-	added by
-	<a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a>
-	at <em>{{ action.timestamp }}</em>
+	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">{{ N }} new {% singular_or_plural action.action_object.item_type N %}</a> {{ N|pluralize:"was,were" }}
+	added by <a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a> at <em>{{ action.timestamp }}</em>
 
 
 	{% elif action.verb == "RemoveData" %}
 	Data taken in {{ action.data.instrument }} - {{ action.data.band }} removed by
-	<a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a>
-	at <em>{{ action.timestamp }}</em>
-    
+	<a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a> at <em>{{ action.timestamp }}</em>
+
 
 	{% elif action.verb == "UpdateSelf" %}
 	The following updates were performed on this {{ action.data.object_type }}:
@@ -61,20 +36,8 @@
 
 
 	{% elif action.verb == "Update" %}
-	{% if N == 1 %}
-	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">
-	  1 {{ action.action_object.item_type|get_name_singular }}
-	</a>
-	was
-	{% else %}
-	<a href="{{ action.action_object.get_absolute_url }}" target="_blank">
-	  {{ N }} {{ action.action_object.item_type|get_name_plural }}
-	</a>
-	were
-	{% endif %}
-	updated by
-	<a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a>
-	at <em>{{ action.timestamp }}</em>
+	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">{{ N }} {% singular_or_plural action.action_object.item_type N %}</a> {{ N|pluralize:"was,were" }}
+	updated by <a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a> at <em>{{ action.timestamp }}</em>
 
 
 	{% elif action.verb == "DeleteObject" %}
@@ -86,14 +49,7 @@
 	  </tr>
 	  {% endfor %}
 	</table>
-	{% if N == 1 %}
-	was
-	{% else %}
-	were
-	{% endif %}
-	deleted by
-	<a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a>
-	at <em>{{ action.timestamp }}</em>
+	{{ N|pluralize:"was,were" }} deleted by <a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a> at <em>{{ action.timestamp }}</em>
 
 
 	{% elif action.verb == "RemovedFromGroup" %}
@@ -105,12 +61,7 @@
 	  </tr>
 	  {% endfor %}
 	</table>
-	{% if N == 1 %}
-	was
-	{% else %}
-	were
-	{% endif %}
-	removed from the group at <em>{{ action.timestamp }}</em>
+	{{ N|pluralize:"was,were" }} removed from the group at <em>{{ action.timestamp }}</em>
 
 
 	{% elif action.verb == "AddedToGroup" %}
@@ -122,12 +73,7 @@
 	  </tr>
 	  {% endfor %}
 	</table>
-	{% if N == 1 %}
-	was
-	{% else %}
-	were
-	{% endif %}
-	added to the group at <em>{{ action.timestamp }}</em>
+	{{ N|pluralize:"was,were" }} added to the group at <em>{{ action.timestamp }}</em>
 
 
 	{% elif action.verb == "LeftGroup" %}
@@ -135,64 +81,22 @@
 
 
 	{% elif action.verb == "RemovedFromCollection" %}
-	{% if N == 1 %}
-	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">
-	  1 {{ action.action_object.item_type|get_name_singular }}
-	</a>
-	was
-	{% else %}
-	<a href="{{ action.action_object.get_absolute_url }}" target="_blank">
-	  {{ N }} {{ action.action_object.item_type|get_name_plural }}
-	</a>
-	were
-	{% endif %}
+	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">{{ N }} {% singular_or_plural action.action_object.item_type N %}</a> {{ N|pluralize:"was,were" }}
 	removed from the collection at <em>{{ action.timestamp }}</em>
 
 
 	{% elif action.verb == "AddedToCollection" %}
-	{% if N == 1 %}
-	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">
-	  1 {{ action.action_object.item_type|get_name_singular }}
-	</a>
-	was
-	{% else %}
-	<a href="{{ action.action_object.get_absolute_url }}" target="_blank">
-	  {{ N }} {{ action.action_object.item_type|get_name_plural }}
-	</a>
-	were
-	{% endif %}
+	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">{{ N }} {% singular_or_plural action.action_object.item_type N %}</a> {{ N|pluralize:"was,were" }}
 	added to the collection at <em>{{ action.timestamp }}</em>
 
 
 	{% elif action.verb == "MadePublic" %}
-	{% if N == 1 %}
-	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">
-	  1 private {{ action.action_object.item_type|get_name_singular }}
-	</a>
-	is
-	{% else %}
-	<a href="{{ action.action_object.get_absolute_url }}" target="_blank">
-	  {{ N }} private {{ action.action_object.item_type|get_name_plural }}
-	</a>
-	are
-	{% endif %}
-	now <em>public</em>.
-	Performed by <a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a>
-	at <em>{{ action.timestamp }}</em>
+	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">{{ N }} private {% singular_or_plural action.action_object.item_type N %}</a> {{ N|pluralize:"was,were" }}
+	made <em>public</em> by <a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a> at <em>{{ action.timestamp }}</em>
 
 
 	{% elif action.verb == "MadePublicGroup" %}
-	{% if N == 1 %}
-	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">
-	  1 private {{ action.action_object.item_type|get_name_singular }}
-	</a>
-	the group had access to was
-	{% else %}
-	<a href="{{ action.action_object.get_absolute_url }}" target="_blank">
-	  {{ N }} private {{ action.action_object.item_type|get_name_plural }}
-	</a>
-	the group had access to were
-	{% endif %}
+	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">{{ N }} private {% singular_or_plural action.action_object.item_type N %}</a> the group has access to {{ N|pluralize:"was,were" }}
 	made public at <em>{{ action.timestamp }}</em>
 
 
@@ -205,23 +109,13 @@
 	  </tr>
 	  {% endfor %}
 	</table>
-	by <a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a>
-	at <em>{{ action.timestamp }}</em>
+	by <a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a>	at <em>{{ action.timestamp }}</em>
 
 
 	{% elif action.verb == "GiveAccess" %}
 	The group was granted access to
-	{% if N == 1 %}
-	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">
-	  1 private {{ action.action_object.item_type|get_name_singular }}
-	</a>
-	{% else %}
-	<a href="{{ action.action_object.get_absolute_url }}" target="_blank">
-	  {{ N }} private {{ action.action_object.item_type|get_name_plural }}
-	</a>
-	{% endif %}
-	by <a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a>
-	at <em>{{ action.timestamp }}</em>
+	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">{{ N }} private {% singular_or_plural action.action_object.item_type N %}</a>
+	by <a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a> at <em>{{ action.timestamp }}</em>
 
 
 	{% elif action.verb == "CedeOwnershipSelf" %}
@@ -229,21 +123,12 @@
 
 
 	{% elif action.verb == "CedeOwnership" %}
-	{% if N == 1 %}
-	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">
-	  1 private {{ action.action_object.item_type|get_name_singular }}
-	</a>
-	{% else %}
-	<a href="{{ action.action_object.get_absolute_url }}" target="_blank">
-	  {{ N }} private {{ action.action_object.item_type|get_name_plural }}
-	</a>
-	{% endif %}
-	the group has access to changed owner from
-	<a href="{{ action.data.previous_owner_url }}" target="_blank">{{ action.data.previous_owner }}</a>
-	to
-	<a href="{{ action.data.next_owner_url }}" target="_blank">{{ action.data.next_owner }}</a>
-	at <em>{{ action.timestamp }}</em>
+	<a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">{{ N }} private {% singular_or_plural action.action_object.item_type N %}</a> the group has access to changed owner from
+	<a href="{{ action.data.previous_owner_url }}" target="_blank">{{ action.data.previous_owner }}</a> to <a href="{{ action.data.next_owner_url }}" target="_blank">{{ action.data.next_owner }}</a> at <em>{{ action.timestamp }}</em>
 
+	
+	{% elif action.verb == "NewUser" %}
+	NONE
 
 	
 	{% endif %}
