--- a/templates/activity_summary.html
+++ b/templates/activity_summary.html
@@ -135,7 +135,7 @@
 
 
     {% elif action.verb == "Update" %}
-    <a href="{{ action.action_object.myitems.first.get_absolute_url }}" target="_blank">{{ N }} {% singular_or_plural action.action_object.item_type N %}</a> {{ N|pluralize:"was,were" }}
+    <a href="{{ action.action_object.get_absolute_url }}" target="_blank">{{ N }} {% singular_or_plural action.action_object.item_type N %}</a> {{ N|pluralize:"was,were" }}
     updated by <a href="{{ action.actor.get_absolute_url }}" target="_blank">{{ action.actor }}</a> at <em>{{ action.timestamp }}</em>
 
 
