Cone search added to query page. Band order no longer hardcoded

--- a/lenses/static/lenses/css/lens_query.css
+++ b/lenses/static/lenses/css/lens_query.css
@@ -96,3 +96,9 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 } 
+
+
+.tab-content {
+  height: 130px;
+  width: 400px;
+}
