Fixed display on query page

--- a/lenses/templates/lenses/lens_query.html
+++ b/lenses/templates/lenses/lens_query.html
@@ -46,7 +46,7 @@
   </ul>
 
   <!-- Tab panes -->
-  <div class="tab-content">
+  <div class="tab-content taba">
     <div id="home" class="container tab-pane active"><br>
 
     <table>
